# zephyr-user-space-examples

./: README.md
boards/frdm_imx93/: README.md
boards/frdm_imx93/patches/kernel/: 0001-clk-imx93-keep-m33-peripheral-clocks-critical.patch
boards/frdm_imx93/patches/zephyr/: 0001-soc-nxp-imx93-m33-add-lpspi3-node.patch
boards/frdm_imx93/samples/pixpaper_213m/: README.md
boards/frdm_imx93/samples/pixpaper_213m/apps/image/: CMakeLists.txt  README.md  prj.conf  sample.yaml
boards/frdm_imx93/samples/pixpaper_213m/apps/image/src/: main.c  png_HEX.h
boards/frdm_imx93/samples/pixpaper_213m/binding/: open-ep,pixpaper-213m.yaml
boards/frdm_imx93/samples/pixpaper_213m/common/: frdm_imx93_mimx9352_m33.overlay
boards/frdm_imx93/samples/pixpaper_213m/patches/: 0001-dts-bindings-add-open-ep-vendor-prefix.patch
boards/uiapduino/: README.md
boards/uiapduino/samples/pixpaper_213m/: README.md
boards/uiapduino/samples/pixpaper_213m/apps/console/: CMakeLists.txt  README.md  prj.conf  sample.yaml
boards/uiapduino/samples/pixpaper_213m/apps/console/src/: img_packed.h  main.c
boards/uiapduino/samples/pixpaper_213m/apps/pong/: CMakeLists.txt  README.md  sample.yaml
boards/uiapduino/samples/pixpaper_213m/apps/pong/src/: main.c
boards/uiapduino/samples/pixpaper_213m/apps/snake/: CMakeLists.txt  README.md  sample.yaml
boards/uiapduino/samples/pixpaper_213m/apps/tictactoe/: CMakeLists.txt  README.md  sample.yaml
boards/uiapduino/samples/pixpaper_213m/common/: uiapduino_pro_micro_ch32v003.overlay
boards/uiapduino/samples/pixpaper_213m/tools/: png2bin.py
(+2 files in other folders)
